<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_learning_leader"> Learning Leaders</string>
    <string name="tab_skill_iq_leader"> Skill IQ Leaders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name"> Name</string>
    <string name="text_hour"> Value</string>
    <string name="text_country">Country</string>
    <string name="learning_hours">Learning Hours</string>
    <string name="skill_score">Skill IQ Score</string>
    <string name="button">Submit</string>
    <string name="title_form">Project Submission</string>
    <string name="github">Project on GITHUB (link)</string>
    <string name="text_email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="dialog_title">Form Submission </string>
    <string name="dialog_message">Are You Sure</string>
    <string name="dialog_yes">Yes</string>
    <string name="question_mark">?</string>



</resources>
