<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

 <TableLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="50dp">
     <TableRow>
         <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="50dp"
             android:text="@string/dialog_message"
             android:textStyle="bold"
             android:textSize="27dp"
             android:padding="0dp"/>
         <TextView
             android:id="@+id/textquestionMarl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/question_mark"
             android:textStyle="bold"
             android:textSize="50dp"
             android:padding="0dp"
             />

     </TableRow>
<!--     <TableRow>
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"

             android:text="Button" />
     </TableRow>-->
 </TableLayout>

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="150dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:padding="20dp"
        android:textSize="25dp"
        android:text="@string/dialog_yes"
        android:background="@drawable/dialog_background"/>

</LinearLayout>
