<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <!--   <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <ImageView
                android:id="@+id/skills_imageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="start"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/skilliq" />
            <!-- android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/skills_text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorblack"
                    tools:layout_editor_absoluteX="326dp"
                    tools:layout_editor_absoluteY="11dp"
                    android:layout_marginTop="35dp"/>

                <TableLayout
                    android:id="@+id/relative_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/skills_text_name">

                    <TableRow>

                        <TextView
                            android:id="@+id/skills_text_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_hour"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="327dp"
                            tools:layout_editor_absoluteY="67dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                        <TextView
                            android:id="@+id/skills_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/skill_score"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginStart="-15dp"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/skills_text_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_country"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="22sp"
                            tools:layout_editor_absoluteX="417dp"
                            tools:layout_editor_absoluteY="78dp" />
                    </TableRow>
                </TableLayout>

            </RelativeLayout>


        </LinearLayout>
        <!-- </androidx.constraintlayout.widget.ConstraintLayout>-->
    </androidx.cardview.widget.CardView>


</FrameLayout>